# claude-skills-automation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/training/: 001_alb_ec2_rds.json  002_serverless_api.json  003_ecs_fargate.json
skills/: terraform-aws.md  terraform-aws_backup_1.md  terraform-aws_backup_2.md  terraform-aws_backup_3.md  terraform-aws_backup_4.md
src/: __init__.py  evaluator.py  main.py  models.py  runner.py  skills_updater.py  web.py
